--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <title>Cachera - Cache And Memory Resource Allocation Simulator</title>
+    <title>Cacher - Cache And Memory Resource Allocation Simulator</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -11,7 +11,7 @@
         <header class="w3-container w3-theme me-padding" id="myHeader">
         <div class="w3-center">
             <h4>Cache And Memory Resource Allocation Simulator</h4>
-            <h1 class="w3-xxxlarge w3-animate-bottom">Cachera</h1>
+            <h1 class="w3-xxxlarge w3-animate-bottom">Cacher</h1>
         </div>
     </header>
 
