--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <option value=16>16</option><option value=32>32</option>
                 <option value=64>64</option></select><br><br>
 
-                Set Size (Blocks): <select name="cache[]" id="set">
+                Number of Sets: <select name="cache[]" id="set">
                 <option value=0  selected="true" disabled="disabled">Select</option>
                 <option value=1>1</option><option value=2>2</option>
                 <option value=4>4</option><option value=8>8</option>
